tests/redefined/out.txt
error: redefined identifier: x
  ┌─ err.sml:2:5
  │
2 │ and x = 4
  │     ^

typechecking failed
